<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Please input an amount for tip calculation</string>
    <string name="add_amount">Please input an amount</string>
    <string name="button_ten">10%</string>
    <string name="button_fifteen">15%</string>
    <string name="button_twenty">20%</string>
    <string name="lable_tipis">Tip is</string>

</resources>
