<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework.tipcalculator.TipCalculatorActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/add_amount" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnFifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTipis"
        android:layout_centerHorizontal="true"
        android:text="@string/button_fifteen" />

    <Button
        android:id="@+id/btnTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_marginTop="54dp"
        android:layout_toLeftOf="@+id/btnFifteen"
        android:text="@string/button_ten" />

    <Button
        android:id="@+id/btnTwenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTipis"
        android:layout_toRightOf="@+id/btnFifteen"
        android:text="@string/button_twenty" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipis"
        android:layout_alignBottom="@+id/tvTipis"
        android:layout_alignLeft="@+id/btnFifteen"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTen"
        android:layout_below="@+id/btnTen"
        android:layout_marginTop="115dp"
        android:text="@string/lable_tipis"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
